unset !important box-sizing for bm-menu and overflow hidden important to disable scroll, also position fixed the hamburger menu with !important flag so that its positioned correctly and not lost on scroll

--- a/client/src/components/Burger/style.css
+++ b/client/src/components/Burger/style.css
@@ -1,94 +1,98 @@
 /* Position and sizing of burger button */
 .bm-burger-button {
-    position: fixed;
-    width: 36px;
-    height: 30px;
-    left: 36px;
-    top: 36px;
-  }
-  
-  /* Color/shape of burger icon bars */
-  .bm-burger-bars {
-    background: #373a47;
-  }
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
 
-  /* hamburger Automation */
-  .hamburger-react {
-    display: none;
-    z-index: 2000;
-    color: rgb(147, 241, 5);
-    left: 2vw;
-    border-radius: 4px;
-  }
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+}
 
-  .hamburger-react-white {
-    display: none;
-    z-index: 2000;
-    color: greenyellow;
-    left: 2vw;
-    border: solid 1px white;
-    border-radius: 4px;
-  }
-  
-  /* Color/shape of burger icon bars on hover*/
-  .bm-burger-bars-hover {
-    background: #a90000;
-  }
-  
-  /* Position and sizing of clickable cross button */
-  .bm-cross-button {
-    height: 24px;
-    width: 24px;
-    margin-top: -30%;
-    display: none;
-  }
-  
-  /* Color/shape of close button cross */
-  .bm-cross {
-    background: #bdc3c7;
-  }
-  
-  /*
+/* hamburger Automation */
+.hamburger-react {
+  display: none;
+  z-index: 2000;
+  color: rgb(147, 241, 5);
+  left: 5vw;
+  top: 3vh;
+  border-radius: 4px;
+  position: fixed !important;
+}
+
+.hamburger-react-white {
+  display: none;
+  z-index: 2000;
+  color: greenyellow;
+  left: 2vw;
+  border: solid 1px white;
+  border-radius: 4px;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #a90000;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+  margin-top: -30%;
+  display: none;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/*
   Sidebar wrapper styles
   Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
   */
-  .bm-menu-wrap {
-    position: fixed;
-    height: 100%;
-  }
-  
-  /* General sidebar styles */
-  .bm-menu {
-    background: #373a47;
-    padding: 2.5em 1.5em 0;
-    font-size: 1.15em;
-    margin-top: -30%;
-    background-color: black;
-  }
-  
-  /* Morph shape necessary with bubble or elastic */
-  .bm-morph-shape {
-    fill: #373a47;
-  }
-  
-  /* Wrapper for item list */
-  .bm-item-list {
-  }
-  
-  /* Individual item */
-  .bm-item {
-    display: inline-block;
-  }
-  
-  /* Styling of overlay */
-  .bm-overlay {
-    background: rgba(0, 0, 0, 0.3);
-    margin-top: -11%;
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+}
 
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+  background-color: black;
+  overflow: hidden !important;
+  margin-top: -30%;
+  box-sizing: unset !important;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
+  bottom: 0;
+}
+
+@media (max-width: 912px) {
+  .hamburger-react {
+    display: block;
   }
 
-  @media (max-width: 912px) {
-    .hamburger-react {
-        display: block;
-      };
-  }
+  ;
+}
